--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     overflow: hidden;
     user-select: none;
     margin: 0;
+    background: #000;
 }
 
 @font-face {
@@ -10,11 +11,11 @@
     src: url(Assets/VCR_OSD.ttf);
 }
 
-@font-face {
+/* @font-face {
     font-family: MisterPixel;
     font-weight: bold;
     src: url(Assets/MisterPixel.ttf);
-}
+} */
 
 canvas {
     position: absolute;
